4824.	[port]		Add iOS hooks to dig. [RT #42011]

4823.	[test]		Refactor reclimit system test to improve its
			reliability and speed. [RT #46632]

4822.	[bug]		Use resign_sooner in dns_db_setsigningtime. [RT #46473]

4821.	[bug]		When resigning ensure that the SOA's expire time is
			always later that the resigning time of other records.
			[RT #46473]

4820.	[bug]		dns_db_subtractrdataset should transfer the resigning
			information to the new header. [RT #46473]

4819.	[bug]		Fully backout the transaction when adding a RRset
			to the resigning / removal heaps fails. [RT #46473]

4818.	[test]		The logfileconfig system test could intermittently
			report false negatives on some platforms. [RT #46615]

4817.	[cleanup]	Use DNS_NAME_INITABSOLUTE and DNS_NAME_INITNONABSOLUTE.
			[RT #45433]

4816.	[bug]		Don't use a common array for storing EDNS options
			in DiG as it could fill up. [RT #45611]

4815.	[bug]		rbt_test.c:insert_and_delete needed to call
			dns_rbt_addnode instead of dns_rbt_addname. [RT #46553]

4814.	[cleanup]	Use AS_HELP_STRING for consistent help text. [RT #46521]

4813.	[bug]		Address potential read after free errors from
			query_synthnodata, query_synthwildcard and
			query_synthnxdomain. [RT #46547]

4812.	[bug]		Minor improvements to stability and consistency of code
			handling managed keys. [RT #46468]

4811.	[bug]		Revert api changes to use <isc/buffer.h> inline
			macros.  Provide a alternative mechanism to turn
			on the use of inline macros when building BIND.
			[RT #46520]

4810.	[test]		The chain system test failed if the IPv6 interfaces
			were not configured. [RT #46508]

	--- 9.12.0b2 released ---

4809.	[port]		Check at configure time whether -latomic is needed
			for stdatomic.h. [RT #46324]

4808.	[bug]		Properly test for zlib.h. [RT #46504]

4807.	[cleanup]	isc_rng_randombytes() returns a specified number of
			bytes from the PRNG; this is now used instead of
			calling isc_rng_random() multiple times. [RT #46230]
