@@ -1,3 +1,6 @@
+4825.	[bug]		Prevent a bogus "error during managed-keys processing
+			(no more)" warning from being logged. [RT #46645]
+
 4824.	[port]		Add iOS hooks to dig. [RT #42011]
 
 4823.	[test]		Refactor reclimit system test to improve its
